More progress, mostly in the town loading.